--- a/PowerApp/Src/ListaOKRs.fx.yaml
+++ b/PowerApp/Src/ListaOKRs.fx.yaml
@@ -2432,10 +2432,10 @@
             DisabledFill: =RGBA(214, 221, 224, 1)
             DisplayMode: |-
                 =If(
-                    Gallery2.Selected.estadoKRtext.Text = "en curso" && DataCardValue22_1.ValidationState = "Valid",
+                    Lower(Gallery2.Selected.estadoKRtext.Text) = "en curso" && DataCardValue22_1.ValidationState = "Valid",
                     DisplayMode.Edit,
                     If(
-                        Gallery2.Selected.estadoKRtext.Text = "sin aprobación" && !IsBlank(DataCardValue43.Selected.Value),
+                        Lower(Gallery2.Selected.estadoKRtext.Text) = "sin aprobación" && !IsBlank(DataCardValue43.Selected.Value),
                         DisplayMode.Edit,
                         DisplayMode.Disabled
                     )
