--- a/PowerApp/Other/Src/ListaOKRs.pa.yaml
+++ b/PowerApp/Other/Src/ListaOKRs.pa.yaml
@@ -130,9 +130,10 @@ Screens:
                   If(!IsBlank(filterAnio.Selected.Value),Year(fechaProgramadainicio) = filterAnio.Selected.Value,true)
               )
             TemplateSize: =212
+            Visible: =vistaDetalle
             Width: =1270
             X: =53
-            Y: =166
+            Y: =172
           Children:
             - HtmlText1:
                 Control: HtmlViewer@2.1.0
@@ -742,7 +743,7 @@ Screens:
                   Text: ="Editar KR"
                   Visible: |-
                     =If(
-                        estadoKRtext.Text = "finalizado",
+                        Lower(estadoKRtext.Text) = "finalizado",
                         false,
                         Boolean(visibleBotonPerUser.Text)
                     )
@@ -767,7 +768,7 @@ Screens:
                   Text: ="Crear Tarea"
                   Visible: |-
                     =If(
-                        estadoKRtext.Text = "finalizado",
+                        Lower(estadoKRtext.Text) = "finalizado",
                         false,
                         Boolean(visibleBotonPerUser.Text)
                     )
@@ -931,16 +932,17 @@ Screens:
       - btnAgregarKr:
           Control: Button@0.0.43
           Properties:
-            Appearance: ='ButtonCanvas.Appearance'.Subtle
+            Align: =Align.Left
+            Appearance: ='ButtonCanvas.Appearance'.Primary
             FontWeight: =FontWeight.Semibold
             Icon: ="Add"
             IconStyle: ='ButtonCanvas.IconStyle'.Filled
             Layout: ='ButtonCanvas.Layout'.IconBefore
             OnSelect: =Navigate(Registrar_Kr)
             Text: ="Agregar KR"
-            Width: =130
-            X: =1066
-            Y: =128
+            Width: =125
+            X: =1070
+            Y: =130
       - btnActualizarVista:
           Control: Button@0.0.43
           Properties:
@@ -948,15 +950,15 @@ Screens:
             FontWeight: =FontWeight.Semibold
             Icon: ="ArrowSync"
             IconStyle: ='ButtonCanvas.IconStyle'.Filled
-            Layout: ='ButtonCanvas.Layout'.IconBefore
+            Layout: ='ButtonCanvas.Layout'.IconOnly
             OnSelect: |-
               =Refresh(T_OKR_APP_GCI_003);
               Refresh(T_REG_STS_KR_APP_GCI_003);
               Refresh(T_TAREAS_APP_GCI_003)
             Text: ="Sincronizar"
-            Width: =110
-            X: =1205
-            Y: =128
+            Width: =40
+            X: =1202
+            Y: =130
       - filterTrimestre:
           Control: ComboBox@0.0.48
           Properties:
@@ -1022,6 +1024,19 @@ Screens:
                   FieldName: ="Value"
                   FieldType: ="s"
                   Order: =1
+      - CambiarVista:
+          Control: Toggle@1.1.2
+          Properties:
+            BasePaletteColor: =RGBA(0, 153, 204, 1)
+            Height: =50
+            Label: =
+            LabelPosition: ='Toggle.LabelPosition'.Above
+            OnCheck: =Set(vistaDetalle,false)
+            OnUncheck: =Set(vistaDetalle,true)
+            ToggleSize: =45
+            Width: =73
+            X: =1245
+            Y: =115
       - Popup:
           Control: GroupContainer@1.3.0
           Variant: ManualLayout
@@ -3029,3 +3044,11 @@ Screens:
                               Width: =30
                               Wrap: =false
                               Y: =DataCardKey37.Y
+      - Rectangle3:
+          Control: Rectangle@2.3.0
+          Properties:
+            Fill: =RGBA(122, 138, 143, 1)
+            Height: =47
+            Width: =2
+            X: =1058
+            Y: =122
