--- a/PowerApp/Src/App.fx.yaml
+++ b/PowerApp/Src/App.fx.yaml
@@ -9,8 +9,9 @@ App As appinfo:
         Set(displayModeVar,DisplayMode.View);
         Set(varEstadoKr,"sin aprobación");
         Set(lastID, form_Registrar.LastSubmit.nombreKR);
-        Set(usuarioActual,User().Email)
-    Theme: =PowerAppsTheme
+        Set(usuarioActual,User().Email);
+        Set(vistaDetalle,true)
+    Theme: =Pacifico
 
     Host As hostControl.DefaultHostControlVariant:
         OnCancel: =false
