--- a/PowerApp/Src/ListaOKRs.fx.yaml
+++ b/PowerApp/Src/ListaOKRs.fx.yaml
@@ -168,9 +168,10 @@
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplateSize: =212
+        Visible: =vistaDetalle
         Width: =1270
         X: =53
-        Y: =166
+        Y: =172
         ZIndex: =7
 
         HtmlText1 As htmlViewer:
@@ -837,7 +838,7 @@
             Text: ="Editar KR"
             Visible: |-
                 =If(
-                    estadoKRtext.Text = "finalizado",
+                    Lower(estadoKRtext.Text) = "finalizado",
                     false,
                     Boolean(visibleBotonPerUser.Text)
                 )
@@ -865,7 +866,7 @@
             Text: ="Crear Tarea"
             Visible: |-
                 =If(
-                    estadoKRtext.Text = "finalizado",
+                    Lower(estadoKRtext.Text) = "finalizado",
                     false,
                     Boolean(visibleBotonPerUser.Text)
                 )
@@ -1046,7 +1047,8 @@
             ZIndex: =36
 
     btnAgregarKr As Botón:
-        Appearance: ='ButtonCanvas.Appearance'.Subtle
+        Align: =Align.Left
+        Appearance: ='ButtonCanvas.Appearance'.Primary
         BasePaletteColor: =
         DisplayMode: =DisplayMode.Edit
         FontColor: =
@@ -1058,9 +1060,9 @@
         Layout: ='ButtonCanvas.Layout'.IconBefore
         OnSelect: =Navigate(Registrar_Kr)
         Text: ="Agregar KR"
-        Width: =130
-        X: =1066
-        Y: =128
+        Width: =125
+        X: =1070
+        Y: =130
         ZIndex: =11
 
     btnActualizarVista As Botón:
@@ -1073,15 +1075,15 @@
         Height: =32
         Icon: ="ArrowSync"
         IconStyle: ='ButtonCanvas.IconStyle'.Filled
-        Layout: ='ButtonCanvas.Layout'.IconBefore
+        Layout: ='ButtonCanvas.Layout'.IconOnly
         OnSelect: |-
             =Refresh(T_OKR_APP_GCI_003);
             Refresh(T_REG_STS_KR_APP_GCI_003);
             Refresh(T_TAREAS_APP_GCI_003)
         Text: ="Sincronizar"
-        Width: =110
-        X: =1205
-        Y: =128
+        Width: =40
+        X: =1202
+        Y: =130
         ZIndex: =12
 
     "filterTrimestre As 'Cuadro combinado'.pcfdataset":
@@ -1156,6 +1158,20 @@
             Order: =1
             ZIndex: =36
 
+    CambiarVista As Alternancia:
+        BasePaletteColor: =RGBA(0, 153, 204, 1)
+        DisplayMode: =DisplayMode.Edit
+        Height: =50
+        Label: =
+        LabelPosition: ='Toggle.LabelPosition'.Above
+        OnCheck: =Set(vistaDetalle,false)
+        OnUncheck: =Set(vistaDetalle,true)
+        ToggleSize: =45
+        Width: =73
+        X: =1245
+        Y: =115
+        ZIndex: =16
+
     Popup As groupContainer.manualLayoutContainer:
         DropShadow: =DropShadow.Light
         Height: =668
@@ -1166,7 +1182,7 @@
         Visible: =pouplista
         Width: =1366
         Y: =100
-        ZIndex: =16
+        ZIndex: =17
 
         HtmlText2 As htmlViewer:
             DisabledBorderColor: =RGBA(166, 166, 166, 1)
@@ -1799,7 +1815,7 @@
         Visible: =pouplista_2
         Width: =1366
         Y: =100
-        ZIndex: =17
+        ZIndex: =18
 
         HtmlText2_3 As htmlViewer:
             DisabledBorderColor: =RGBA(166, 166, 166, 1)
@@ -2650,7 +2666,7 @@
         Visible: =pouplista_3
         Width: =1366
         Y: =100
-        ZIndex: =18
+        ZIndex: =19
 
         HtmlText2_5 As htmlViewer:
             DisabledBorderColor: =RGBA(166, 166, 166, 1)
@@ -3200,7 +3216,7 @@
         Visible: =pouplista_4
         Width: =1366
         Y: =100
-        ZIndex: =19
+        ZIndex: =20
 
         HtmlText2_7 As htmlViewer:
             DisabledBorderColor: =RGBA(166, 166, 166, 1)
@@ -3736,4 +3752,13 @@
                     Wrap: =false
                     Y: =DataCardKey37.Y
                     ZIndex: =4
+
+    Rectangle3 As rectangle:
+        BorderColor: =App.Theme.Colors.Darker40
+        Fill: =RGBA(122, 138, 143, 1)
+        Height: =47
+        Width: =2
+        X: =1058
+        Y: =122
+        ZIndex: =21
 
