--- a/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
+++ b/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
@@ -13,9 +13,9 @@ Screens:
       - HtmlText1_3:
           Control: HtmlViewer@2.1.0
           Properties:
-            Height: =72
+            Height: =47
             HtmlText: |-
-              =$"<div style='border-radius: 0px;padding: 28px;margin: 0px;background-color: #ffffff;border-bottom: 3px solid rgba(0,0,0,0.3);border-top: 0px solid rgba(0,0,0,0.3);border-left: 0px solid rgba(0,0,0,0.3);border-right: 0px solid rgba(0,0,0,0.3);'></div>"
+              =$"<div style='border-radius: 0px;padding: 20px;margin: 0px;background-color: #0099cc;border-bottom: 3px solid rgba(0,0,0,0.3);border-top: 0px solid rgba(0,0,0,0.3);border-left: 0px solid rgba(0,0,0,0.3);border-right: 0px solid rgba(0,0,0,0.3);'></div>"
             OnSelect: =Select(Parent)
             PaddingBottom: =1
             PaddingLeft: =1
@@ -23,7 +23,7 @@ Screens:
             PaddingTop: =1
             Width: =1244
             X: =59
-            Y: =178
+            Y: =179
       - Rectangle1_7:
           Control: Rectangle@2.3.0
           Properties:
@@ -42,7 +42,7 @@ Screens:
           Control: Gallery@2.15.0
           Variant: BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0
           Properties:
-            Height: =485
+            Height: =531
             Items: |+
               =Filter(
                   T_OKR_APP_GCI_003,
@@ -63,10 +63,10 @@ Screens:
                   If(!IsBlank(filterAnio_1.Selected.Value),Year(fechaProgramadainicio) = filterAnio_1.Selected.Value,true)
               )
 
-            TemplateSize: =58
-            Width: =1250
+            TemplateSize: =62
+            Width: =1248
             X: =59
-            Y: =237
+            Y: =226
           Children:
             - HtmlText1_2:
                 Control: HtmlViewer@2.1.0
@@ -85,24 +85,26 @@ Screens:
                 Properties:
                   Text: =ThisItem.codigoKR
                   Width: =90
-                  X: =19
-                  Y: =12
+                  X: =10
+                  Y: =11
             - TextCanvas7_1:
                 Control: Text@0.0.47
                 Properties:
                   Height: =56
                   Text: =ThisItem.nombreKR
-                  Width: =282
+                  Width: =269
                   Wrap: =false
-                  X: =109
+                  X: =90
+                  Y: =-2
             - TextCanvas7_2:
                 Control: Text@0.0.47
                 Properties:
                   Height: =56
                   Text: |
                     =Concatenate(First(Split(ThisItem.usuarioAprobador.DisplayName, " ")).Value, " ", Last(FirstN(Split(ThisItem.usuarioAprobador.DisplayName, " "), CountRows(Split(ThisItem.usuarioAprobador.DisplayName, " ")) - 1)).Value)
-                  Width: =141
-                  X: =435
+                  Width: =142
+                  X: =380
+                  Y: =-2
             - estadoKRtext_1:
                 Control: Text@0.0.47
                 Properties:
@@ -123,8 +125,8 @@ Screens:
                   Text: =LookUp(T_REG_STS_KR_APP_GCI_003,nombreKRAsociado.Id = ThisItem.ID && status.Value = "activo",Proper(nombreEstado))
                   Weight: ='TextCanvas.Weight'.Semibold
                   Width: =140
-                  X: =599
-                  Y: =17
+                  X: =541
+                  Y: =14
             - Gallery6_3:
                 Control: Gallery@2.15.0
                 Variant: Horizontal
@@ -134,7 +136,7 @@ Screens:
                   TemplatePadding: =0
                   TemplateSize: =30
                   Width: =83
-                  X: =811
+                  X: =727
                   Y: =6
                 Children:
                   - Container2_3:
@@ -182,8 +184,12 @@ Screens:
             - ButtonCanvas1:
                 Control: Button@0.0.43
                 Properties:
+                  Appearance: ='ButtonCanvas.Appearance'.Secondary
+                  Icon: ="Edit"
+                  Layout: ='ButtonCanvas.Layout'.IconOnly
                   OnSelect: =Select(Parent)
-                  X: =1135
+                  Width: =32
+                  X: =1199
                   Y: =7
             - ButtonCanvas1_1:
                 Control: Button@0.0.43
@@ -192,8 +198,17 @@ Screens:
                   BorderColor: =RGBA(238, 40, 122, 1)
                   BorderStyle: =BorderStyle.Solid
                   OnSelect: =Select(Parent)
-                  X: =1018
+                  Width: =121
+                  X: =1067
                   Y: =7
+            - TextCanvas7_5:
+                Control: Text@0.0.47
+                Properties:
+                  Height: =50
+                  Text: =ThisItem.usuarioAprobador.Department
+                  Width: =216
+                  Wrap: =false
+                  X: =830
       - filterLider_1:
           Control: ComboBox@0.0.48
           Properties:
@@ -294,28 +309,27 @@ Screens:
           Properties:
             Align: ='TextInputCanvas.Align'.Center
             BorderColor: =RGBA(122, 138, 143, 1)
-            BorderRadius: =5
             BorderStyle: =BorderStyle.Solid
             BorderThickness: =0
-            Fill: =RGBA(0, 153, 204, 1)
+            Fill: =RGBA(109, 49, 162, 0)
             FontColor: =RGBA(255, 255, 255, 1)
             Height: =30
             Value: ="Código"
             Width: =98
-            X: =59
-            Y: =198
+            X: =51
+            Y: =181
       - TextInputCanvas2_1:
           Control: TextInput@0.0.51
           Properties:
             Align: ='TextInputCanvas.Align'.Center
             BorderRadius: =5
-            Fill: =RGBA(0, 153, 204, 1)
+            Fill: =RGBA(0, 0, 0, 0.01)
             FontColor: =RGBA(255, 255, 255, 1)
             Height: =31
             Value: ="Descripción Kr"
-            Width: =295
-            X: =159
-            Y: =198
+            Width: =255
+            X: =148
+            Y: =181
       - TextInputCanvas2_2:
           Control: TextInput@0.0.51
           Properties:
@@ -325,9 +339,9 @@ Screens:
             FontColor: =RGBA(255, 255, 255, 1)
             Height: =31
             Value: ="Líder"
-            Width: =177
-            X: =456
-            Y: =198
+            Width: =159
+            X: =403
+            Y: =181
       - TextInputCanvas2_3:
           Control: TextInput@0.0.51
           Properties:
@@ -338,8 +352,8 @@ Screens:
             Height: =31
             Value: ="Estado KR"
             Width: =178
-            X: =635
-            Y: =198
+            X: =581
+            Y: =181
       - TextInputCanvas2_4:
           Control: TextInput@0.0.51
           Properties:
@@ -350,5 +364,18 @@ Screens:
             Height: =31
             Value: ="Responsable"
             Width: =150
-            X: =815
-            Y: =198
+            X: =731
+            Y: =181
+      - TextInputCanvas2_10:
+          Control: TextInput@0.0.51
+          Properties:
+            Align: ='TextInputCanvas.Align'.Center
+            BorderRadius: =5
+            Fill: =RGBA(0, 153, 204, 1)
+            FontColor: =RGBA(255, 255, 255, 1)
+            Height: =31
+            Value: |+
+              ="Equipo"
+            Width: =150
+            X: =905
+            Y: =181
