--- a/PowerApp/Src/Prueba_Nayeli.fx.yaml
+++ b/PowerApp/Src/Prueba_Nayeli.fx.yaml
@@ -5,9 +5,9 @@ Prueba_Nayeli As screen:
     HtmlText1_3 As htmlViewer:
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
         Font: =App.Theme.Font
-        Height: =43
+        Height: =47
         HtmlText: |-
-            =$"<div style='border-radius: 0px;padding: 18px;margin: 0px;background-color: #0099cc;border-bottom: 3px solid rgba(0,0,0,0.3);border-top: 0px solid rgba(0,0,0,0.3);border-left: 0px solid rgba(0,0,0,0.3);border-right: 0px solid rgba(0,0,0,0.3);'></div>"
+            =$"<div style='border-radius: 0px;padding: 20px;margin: 0px;background-color: #0099cc;border-bottom: 3px solid rgba(0,0,0,0.3);border-top: 0px solid rgba(0,0,0,0.3);border-left: 0px solid rgba(0,0,0,0.3);border-right: 0px solid rgba(0,0,0,0.3);'></div>"
         OnSelect: =Select(Parent)
         PaddingBottom: =1
         PaddingLeft: =1
@@ -16,7 +16,7 @@ Prueba_Nayeli As screen:
         Size: =13
         Width: =1244
         X: =59
-        Y: =190
+        Y: =179
         ZIndex: =1
 
     Rectangle1_7 As rectangle:
@@ -41,7 +41,7 @@ Prueba_Nayeli As screen:
     "Gallery4 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
         BorderColor: =App.Theme.Colors.Darker40
         DelayItemLoading: =true
-        Height: =485
+        Height: =531
         Items: |+
             =Filter(
                 T_OKR_APP_GCI_003,
@@ -65,10 +65,10 @@ Prueba_Nayeli As screen:
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplatePadding: =0
-        TemplateSize: =58
-        Width: =1250
+        TemplateSize: =62
+        Width: =1248
         X: =59
-        Y: =237
+        Y: =226
         ZIndex: =4
 
         HtmlText1_2 As htmlViewer:
@@ -91,18 +91,18 @@ Prueba_Nayeli As screen:
             Height: =32
             Text: =ThisItem.codigoKR
             Width: =90
-            X: =19
-            Y: =12
+            X: =10
+            Y: =11
             ZIndex: =4
 
         TextCanvas7_1 As Texto:
             DisplayMode: =DisplayMode.Edit
             Height: =56
             Text: =ThisItem.nombreKR
-            Width: =282
+            Width: =269
             Wrap: =false
-            X: =109
-            Y: =0
+            X: =90
+            Y: =-2
             ZIndex: =5
 
         TextCanvas7_2 As Texto:
@@ -110,9 +110,9 @@ Prueba_Nayeli As screen:
             Height: =56
             Text: |
                 =Concatenate(First(Split(ThisItem.usuarioAprobador.DisplayName, " ")).Value, " ", Last(FirstN(Split(ThisItem.usuarioAprobador.DisplayName, " "), CountRows(Split(ThisItem.usuarioAprobador.DisplayName, " ")) - 1)).Value)
-            Width: =107
-            X: =468
-            Y: =0
+            Width: =142
+            X: =380
+            Y: =-2
             ZIndex: =6
 
         estadoKRtext_1 As Texto:
@@ -135,8 +135,8 @@ Prueba_Nayeli As screen:
             Text: =LookUp(T_REG_STS_KR_APP_GCI_003,nombreKRAsociado.Id = ThisItem.ID && status.Value = "activo",Proper(nombreEstado))
             Weight: ='TextCanvas.Weight'.Semibold
             Width: =140
-            X: =599
-            Y: =17
+            X: =541
+            Y: =14
             ZIndex: =7
 
         Gallery6_3 As gallery.galleryHorizontal:
@@ -148,7 +148,7 @@ Prueba_Nayeli As screen:
             TemplatePadding: =0
             TemplateSize: =30
             Width: =83
-            X: =811
+            X: =727
             Y: =6
             ZIndex: =8
 
@@ -218,8 +218,8 @@ Prueba_Nayeli As screen:
             DisplayMode: =DisplayMode.Edit
             Height: =32
             OnSelect: =Select(Parent)
-            Width: =96
-            X: =1094
+            Width: =121
+            X: =1067
             Y: =7
             ZIndex: =10
 
@@ -227,9 +227,9 @@ Prueba_Nayeli As screen:
             DisplayMode: =DisplayMode.Edit
             Height: =50
             Text: =ThisItem.usuarioAprobador.Department
-            Width: =180
+            Width: =216
             Wrap: =false
-            X: =894
+            X: =830
             Y: =0
             ZIndex: =11
 
@@ -352,8 +352,8 @@ Prueba_Nayeli As screen:
         Height: =30
         Value: ="Código"
         Width: =98
-        X: =59
-        Y: =198
+        X: =51
+        Y: =181
         ZIndex: =10
 
     "TextInputCanvas2_1 As 'Entrada de texto'":
@@ -364,9 +364,9 @@ Prueba_Nayeli As screen:
         FontColor: =RGBA(255, 255, 255, 1)
         Height: =31
         Value: ="Descripción Kr"
-        Width: =295
-        X: =159
-        Y: =198
+        Width: =255
+        X: =148
+        Y: =181
         ZIndex: =11
 
     "TextInputCanvas2_2 As 'Entrada de texto'":
@@ -377,9 +377,9 @@ Prueba_Nayeli As screen:
         FontColor: =RGBA(255, 255, 255, 1)
         Height: =31
         Value: ="Líder"
-        Width: =177
-        X: =456
-        Y: =198
+        Width: =159
+        X: =403
+        Y: =181
         ZIndex: =12
 
     "TextInputCanvas2_3 As 'Entrada de texto'":
@@ -391,8 +391,8 @@ Prueba_Nayeli As screen:
         Height: =31
         Value: ="Estado KR"
         Width: =178
-        X: =635
-        Y: =198
+        X: =581
+        Y: =181
         ZIndex: =13
 
     "TextInputCanvas2_4 As 'Entrada de texto'":
@@ -404,7 +404,21 @@ Prueba_Nayeli As screen:
         Height: =31
         Value: ="Responsable"
         Width: =150
-        X: =815
-        Y: =198
+        X: =731
+        Y: =181
         ZIndex: =14
+
+    "TextInputCanvas2_10 As 'Entrada de texto'":
+        Align: ='TextInputCanvas.Align'.Center
+        BorderRadius: =5
+        DisplayMode: =DisplayMode.Edit
+        Fill: =RGBA(0, 153, 204, 1)
+        FontColor: =RGBA(255, 255, 255, 1)
+        Height: =31
+        Value: |
+            ="Equipo"
+        Width: =150
+        X: =905
+        Y: =181
+        ZIndex: =15
 
