--- a/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
+++ b/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
@@ -99,12 +99,12 @@ Screens:
             - TextCanvas7_2:
                 Control: Text@0.0.47
                 Properties:
+                  Align: ='TextCanvas.Align'.Center
                   Height: =56
                   Text: |
                     =Concatenate(First(Split(ThisItem.usuarioAprobador.DisplayName, " ")).Value, " ", Last(FirstN(Split(ThisItem.usuarioAprobador.DisplayName, " "), CountRows(Split(ThisItem.usuarioAprobador.DisplayName, " ")) - 1)).Value)
                   Width: =142
-                  X: =380
-                  Y: =-2
+                  X: =359
             - estadoKRtext_1:
                 Control: Text@0.0.47
                 Properties:
@@ -189,7 +189,7 @@ Screens:
                   Layout: ='ButtonCanvas.Layout'.IconOnly
                   OnSelect: =Select(Parent)
                   Width: =32
-                  X: =1199
+                  X: =1202
                   Y: =7
             - ButtonCanvas1_1:
                 Control: Button@0.0.43
@@ -199,14 +199,15 @@ Screens:
                   BorderStyle: =BorderStyle.Solid
                   OnSelect: =Select(Parent)
                   Width: =121
-                  X: =1067
+                  X: =1074
                   Y: =7
             - TextCanvas7_5:
                 Control: Text@0.0.47
                 Properties:
+                  Align: ='TextCanvas.Align'.Center
                   Height: =50
                   Text: =ThisItem.usuarioAprobador.Department
-                  Width: =216
+                  Width: =223
                   Wrap: =false
                   X: =830
       - filterLider_1:
@@ -318,18 +319,6 @@ Screens:
             Width: =98
             X: =51
             Y: =181
-      - TextInputCanvas2_1:
-          Control: TextInput@0.0.51
-          Properties:
-            Align: ='TextInputCanvas.Align'.Center
-            BorderRadius: =5
-            Fill: =RGBA(0, 0, 0, 0.01)
-            FontColor: =RGBA(255, 255, 255, 1)
-            Height: =31
-            Value: ="Descripción Kr"
-            Width: =255
-            X: =148
-            Y: =181
       - TextInputCanvas2_2:
           Control: TextInput@0.0.51
           Properties:
@@ -340,7 +329,7 @@ Screens:
             Height: =31
             Value: ="Líder"
             Width: =159
-            X: =403
+            X: =406
             Y: =181
       - TextInputCanvas2_3:
           Control: TextInput@0.0.51
@@ -378,4 +367,18 @@ Screens:
               ="Equipo"
             Width: =150
             X: =905
+            Y: =181
+      - TextInputCanvas2_1:
+          Control: TextInput@0.0.51
+          Properties:
+            Align: ='TextInputCanvas.Align'.Center
+            BorderColor: =RGBA(122, 138, 143, 1)
+            BorderStyle: =BorderStyle.Solid
+            BorderThickness: =0
+            Fill: =RGBA(109, 49, 162, 0)
+            FontColor: =RGBA(255, 255, 255, 1)
+            Height: =30
+            Value: ="Nombre KR"
+            Width: =98
+            X: =227
             Y: =181
