--- a/PowerApp/Src/Prueba_Nayeli.fx.yaml
+++ b/PowerApp/Src/Prueba_Nayeli.fx.yaml
@@ -106,13 +106,14 @@ Prueba_Nayeli As screen:
             ZIndex: =5
 
         TextCanvas7_2 As Texto:
+            Align: ='TextCanvas.Align'.Center
             DisplayMode: =DisplayMode.Edit
             Height: =56
             Text: |
                 =Concatenate(First(Split(ThisItem.usuarioAprobador.DisplayName, " ")).Value, " ", Last(FirstN(Split(ThisItem.usuarioAprobador.DisplayName, " "), CountRows(Split(ThisItem.usuarioAprobador.DisplayName, " ")) - 1)).Value)
             Width: =142
-            X: =380
-            Y: =-2
+            X: =359
+            Y: =0
             ZIndex: =6
 
         estadoKRtext_1 As Texto:
@@ -207,7 +208,7 @@ Prueba_Nayeli As screen:
             Layout: ='ButtonCanvas.Layout'.IconOnly
             OnSelect: =Select(Parent)
             Width: =32
-            X: =1199
+            X: =1202
             Y: =7
             ZIndex: =9
 
@@ -219,15 +220,16 @@ Prueba_Nayeli As screen:
             Height: =32
             OnSelect: =Select(Parent)
             Width: =121
-            X: =1067
+            X: =1074
             Y: =7
             ZIndex: =10
 
         TextCanvas7_5 As Texto:
+            Align: ='TextCanvas.Align'.Center
             DisplayMode: =DisplayMode.Edit
             Height: =50
             Text: =ThisItem.usuarioAprobador.Department
-            Width: =216
+            Width: =223
             Wrap: =false
             X: =830
             Y: =0
@@ -356,19 +358,6 @@ Prueba_Nayeli As screen:
         Y: =181
         ZIndex: =10
 
-    "TextInputCanvas2_1 As 'Entrada de texto'":
-        Align: ='TextInputCanvas.Align'.Center
-        BorderRadius: =5
-        DisplayMode: =DisplayMode.Edit
-        Fill: =RGBA(0, 0, 0, 0.01)
-        FontColor: =RGBA(255, 255, 255, 1)
-        Height: =31
-        Value: ="Descripción Kr"
-        Width: =255
-        X: =148
-        Y: =181
-        ZIndex: =11
-
     "TextInputCanvas2_2 As 'Entrada de texto'":
         Align: ='TextInputCanvas.Align'.Center
         BorderRadius: =5
@@ -378,7 +367,7 @@ Prueba_Nayeli As screen:
         Height: =31
         Value: ="Líder"
         Width: =159
-        X: =403
+        X: =406
         Y: =181
         ZIndex: =12
 
@@ -421,4 +410,20 @@ Prueba_Nayeli As screen:
         X: =905
         Y: =181
         ZIndex: =15
+
+    "TextInputCanvas2_1 As 'Entrada de texto'":
+        Align: ='TextInputCanvas.Align'.Center
+        BorderColor: =RGBA(122, 138, 143, 1)
+        BorderRadius: =
+        BorderStyle: =BorderStyle.Solid
+        BorderThickness: =0
+        DisplayMode: =DisplayMode.Edit
+        Fill: =RGBA(109, 49, 162, 0)
+        FontColor: =RGBA(255, 255, 255, 1)
+        Height: =30
+        Value: ="Nombre KR"
+        Width: =98
+        X: =227
+        Y: =181
+        ZIndex: =16
 
