--- a/PowerApp/Other/Src/Registrar_Kr.pa.yaml
+++ b/PowerApp/Other/Src/Registrar_Kr.pa.yaml
@@ -32,6 +32,7 @@ Screens:
               =BorderStyle.Solid
 
             BorderThickness: =4
+            Color: =RGBA(255, 255, 255, 1)
             Fill: =RGBA(238,40,122,0.9)
             Font: =Font.'Open Sans'
             HoverColor: =Color.White
@@ -54,6 +55,7 @@ Screens:
               =BorderStyle.Solid
 
             BorderThickness: =4
+            Color: =RGBA(255, 255, 255, 1)
             DisplayMode: |
               =If(nombreKR_DataCard1.Valid && descripcionKR_DataCard1.Valid && usuarioAprobador_DataCard1.Valid,
               DisplayMode.Edit,
