--- a/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
+++ b/PowerApp/Other/Src/Prueba_Nayeli.pa.yaml
@@ -362,7 +362,7 @@ Screens:
             Fill: =RGBA(0, 153, 204, 1)
             FontColor: =RGBA(255, 255, 255, 1)
             Height: =31
-            Value: |+
+            Value: |
               ="Equipo"
             Width: =150
             X: =905
