--- a/PowerApp/Other/Src/Registrar_Tarea.pa.yaml
+++ b/PowerApp/Other/Src/Registrar_Tarea.pa.yaml
@@ -32,6 +32,7 @@ Screens:
               =BorderStyle.Solid
 
             BorderThickness: =4
+            Color: =RGBA(255, 255, 255, 1)
             DisplayMode: |-
               =If(
                   CountRows(Filter(T_TAREAS_APP_GCI_003,nombreKRAsociado.Id = DataCardValue7.Selected.Id)) > 0,
@@ -58,6 +59,7 @@ Screens:
               =BorderStyle.Solid
 
             BorderThickness: =4
+            Color: =RGBA(255, 255, 255, 1)
             DisplayMode: |
               =DisplayMode.Edit
             Fill: =RGBA(238,40,122,0.9)
